src/components/ui/content.scss
/**
 * how to display "user content"
 */
.content {
	line-height: 1.5em;

	@media (min-width: $mq-medium) {
		position: relative;
		padding-right: 10rem;

		.page--home & { padding-right: 0; }
	}
	@media (min-width: $mq-large) {
		padding-right: 15rem;

		.page--home & { padding-right: 0; }
	}

	> * {
		margin: 0;
		line-height: 1.5;

		+ * {
			margin-top: 1.25em;
		}
	}

	> :first-child {
		margin-top: 0;
	}

	h1,
	h2 {
		margin-top: 3rem;
		padding: 0.25rem;
		font-family: var(--font);
		font-size: 1em;
		font-weight: 400;
		line-height: 1.4;
		color: var(--color-bg);
		background-color: var(--color-secondary);
	}
	h2 {
		display: inline-block;
		background-color: var(--color-primary);
	}
	h1 + h2 {
		margin-top: 1.5rem;
	}

	strong {
		font-weight: normal;
		background-color: var(--color-extra);
	}

	code {
		display: inline-block;
		padding: 0 0.15em;
		font-family: var(--font);
		font-size: 1em;
		line-height: 1.4;
		font-style: italic;
		color: var(--color-bg);
		background-color: var(--color-active);
	}

	ul {
		padding-left: 0.5rem;
		margin: 1.5rem 0 2rem;
		list-style: none;

		ul {
			margin-top: 0.25rem;
			margin-bottom: 0.25rem;

			li {
				&:before {
					content: '○';
				}
			}
		}

		li {
			padding-left: 1.5rem;

			&:before {
				content: '● ';
				position: absolute;
				top: 0;
				left: 0;
				color: var(--color-secondary);
			}
		}
	}

	li {
		position: relative;
	}

	li + li {
		margin-top: 0.25em;
	}

	sup[data-note] {
		display: none;
		color: var(--color-subdued);
		cursor: pointer;

		&:after {
			content: attr(data-note);
			display: none;
			position: absolute;
			right: 0;
			width: 9rem;
			padding-left: 1rem;
			margin: -1rem 0 3rem;
			border-left: 2px solid currentColor;
		}

		@include hover-focus {
			color: var(--color-bg);
			background-color: var(--color-subdued);

			&:after {
				display: block;
				color: var(--color-subdued);
			}
		}
		@media (min-width: $mq-medium) {
			display: inline;
		}

		@media (min-width: $mq-large) {
			&:after {
				width: 14rem;
			}
		}
	}

	iframe {
		width: 100%;
		height: 200px;

		@media (min-width: $mq-xsmall) {
			height: 394px; // best ratio when video is full-width (700px wide)
		}
	}

	audio {
		width: 100%;
		height: 30px;
		background-color: var(--color-primary);
		border: 2px solid var(--color-primary);
	}

	ins {
		display: inline-block;
		padding: 0 0.25rem;
		text-decoration: none;
		transform: scale(1.5);
		transition: transform 300ms cubic-bezier(.46,.82,.08,1.04);
		cursor: default;

		@include hover {
			transform: scale(5);
		}
	}
}

